syntax = "proto3";

enum OutpostMessageType {
  OUTPOST_MESSAGE_TYPE_UNSPECIFIED = 0;
  OUTPOST_MESSAGE_TYPE_HEARTBEAT = 1;
  OUTPOST_MESSAGE_TYPE_CONNECT = 2;
  OUTPOST_MESSAGE_TYPE_PRICE = 3;
  OUTPOST_MESSAGE_TYPE_BALANCE = 4;
}

message OutpostMessage {
  OutpostMessageType type = 1;
  bytes body = 2;
}

message ConnectMessage {
  string id = 1;
  int32 timeout_in_ms = 2;
}

message PriceMessage {
  string price = 1;
  string date = 2;
}

message BalanceMessage {
  string amount = 1;
  string denom = 2;
  string date = 3;
}
